can add tasks now

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -6,3 +6,9 @@
     text-align: center;
     font-weight: normal;
 }
+
+.hold {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
