--- a/templates/main.html
+++ b/templates/main.html
@@ -4,34 +4,35 @@
         <meta charset="UTF-8">
         <title>Ras Site</title>
         <meta name="viewport" content="width=device-width,initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='styles/main.css') }}">
     </head>
     <body>
         <h1 class="top">Welcome to Ras Site Todos!</h1>
         <div class="hold">
             {% if todos == [] %}
-            <div>
+            <div class="topper">
                 No todos to display. 
                 Feel free to add some below!
             </div>
             {% else %}
             {% for task in todos %}
-            <form  action="http://127.0.0.1:8000/remove/{{task.id}}" method="post">
-                {{task["desc"]}}
-                <input type="submit" value="complete"/>
+            <form  action="http://127.0.0.1:8000/remove/{{task.id}}" method="post" class="w-50 d-flex flex-row todo m-1 card justify-content-between">
+                <span class="mx-1">{{task["desc"]}}</span>
+                <input type="submit" value="complete" class="btn btn-primary btn-sm"/>
             </form>
             {% endfor %}
             {% endif %}
-            <div>
+            <div class="adder m-1">
                 <form action="http://127.0.0.1:8000/add" method="post">
                     <label>Task name: </label>
                     <input id="desc" name="desc"/>
-                    <input type="submit" id="Add" value="Add"/>
+                    <input type="submit" id="Add" value="Add" class="btn btn-primary btn-sm"/>
                 </form>
             </div>
+            <form action="http://127.0.0.1:8000/clear" method="post" class="bottom m-1">
+                <input type="submit" id="clear" value="clear" class="btn btn-primary btn-sm"/>
+            </form>
         </div>
-        <form action="http://127.0.0.1:8000/clear" method="post">
-            <input type="submit" id="clear" value="clear"/>
-        </form>
     </body>
 </html>
